k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos-deployment
  namespace: memos
  labels:  
    app: memos

spec:
  replicas: 2
  selector: 
    matchLabels:
      app: memos
  template: 
    metadata:
      labels:
        app: memos
    spec: 
      containers:
        - name: memos
          image: 821868546219.dkr.ecr.eu-west-2.amazonaws.com/eks-memos:latest
          ports:
          - containerPort: 8081
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests: 
              cpu: "250m"
              memory: "256Mi"
