k8s/app/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: memos-service
  namespace: memos
  labels: 
    app: memos

spec: 
  selector:
    app: memos
  type: ClusterIP
  ports:
  - port: 5230
    targetPort: 5230
