k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: memos-ingress
  namespace: memos
  labels: 
    app: memos
  annotations:
    kubernetes.io/ingress.class: traefik
spec: 
  ingressClassName: traefik
  rules: 
   - host: memos.cloudbysamar.com
     http: 
      paths: 
      - path: /
        pathType: Prefix 
        backend: 
         service:
          name: memos-service
          port:
            number: 8081
